--- a/blogspot.html
+++ b/blogspot.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a hyperblog</title>
+    <title>Bienvenido a hyperblog local de Esteban desde MAC</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
