--- a/blogspot.html
+++ b/blogspot.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a hyperblog local de Esteban desde el navegador</title>
+    <title>Bienvenido a hyperblog/title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de cabecera cambio en local</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
