--- a/blogspot.html
+++ b/blogspot.html
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de cabecera desde el pc Sura</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
