--- a/blogspot.html
+++ b/blogspot.html
@@ -19,7 +19,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
                 salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             
-            y ahora estoy practicando desde dos cuentas
+            y ahora estoy practicando desde dos cuentas como cestebanmq y como cemartinez
             <p>Suscribete y dale like</p>
         </div>
         <div id =footer>
