--- a/blogspot.html
+++ b/blogspot.html
@@ -24,7 +24,7 @@
 	   
         </div>
         <div id =footer>
-            Hecho con amor en Platzi! ❤
+            Hecho con amor en Platzi!!! ❤
         </div>
     </div>
 </body>
