--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
         <div id="cabecera">
             <img id="logo" src = "imagenes/logo.png"/>
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Este es el blog con el que aprendí a usar Git y GitHub</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -18,13 +18,12 @@
             </p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
                 salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-            
-            y ahora estoy practicando desde dos cuentas como cestebanmq y como cemartinezz
-            <p>Suscribete y dale like</p>
+
+            <p>Suscribete y dale like!</p>
 	   
         </div>
         <div id =footer>
-            Hecho con amor en Platzi!!! ❤
+            Hecho con amor!!! ❤
         </div>
     </div>
 </body>
